fixed screen issues on mobile

--- a/style.css
+++ b/style.css
@@ -586,7 +586,8 @@ section{
     top: 20%;
   }
   .intro__title{
-    font-size: 35px;
+    width: 70%;
+    font-size: 30px;
     margin-bottom: 3%;
   }
   .services__intro{
@@ -624,11 +625,14 @@ section{
   }
 
   .how__intro__list{
+    padding: 5%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
   }
   .how__intro__list li{
+    padding: 5%;
     text-align: center;
     margin-bottom: 1em;
     padding-top: 50px;
@@ -638,7 +642,7 @@ section{
   }
   
   .how__image{
-    margin-top: 100%;
+    margin-top: 140%;
     margin-left: -1%;
     width: 100%;
     z-index: 2;
